<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scrollbarStyle="outsideOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/heardboom"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="173dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_18sp"
                    android:text="用户登录"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/heard"
                style="@style/TitleStyle"
                android:background="@null">

                <ImageButton
                    style="@style/BackStyle"
                    android:onClick="back" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/heardboom"
                android:layout_marginTop="28dp"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <RelativeLayout
                    android:id="@+id/phone_cell_rl"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/background_radius_white_boder_grey">


                    <com.shenme.androiddemo.widget.MyClearEditText
                        android:id="@+id/cell_no"
                        style="@style/EditTextStyleWhiteNoBorderStyle"
                        android:hint="@string/common_account_format_tip"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:maxLength="11"
                        android:paddingLeft="55dp" />

                    <TextView
                        android:id="@+id/phone_cell"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="12.5dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/common_login_account_tip"
                        android:textColor="@color/black_4f_4f_4f" />
                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/pwd_rl"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                        android:background="@drawable/background_radius_white_boder_grey"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical">


                    <com.shenme.androiddemo.widget.MyClearEditText
                        android:id="@+id/password"
                        style="@style/EditTextStyleWhiteNoBorderStyle"
                        android:digits="1234567890
                QWERTYUIOPASDFGHJKLZXCVBNM
                qwertyuiopasdfghjklzxcvbnm"
                        android:hint="永辉登录密码"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLength="12"
                        android:paddingLeft="55dp"
                        android:singleLine="true" />

                    <TextView
                        android:id="@+id/pwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="12.5dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/common_login_password_tip"
                        android:textColor="@color/black_4f_4f_4f" />
                </RelativeLayout>

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/common_login_right_now"
                    android:textSize="@dimen/text_size_16sp" />

                <Button
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:onClick="other_payway"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/common_register_right_now_tip"
                    android:textSize="@dimen/text_size_16sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/forget_password"
                        android:layout_width="wrap_content"
                        android:layout_height="38dp"
                        android:layout_alignParentRight="true"
                        android:background="@null"
                        android:text="@string/common_forget_password"
                        android:textColor="@color/text_light_blue"
                        android:textSize="@dimen/text_size_14sp" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>